// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Banner Basic 1`] = `
<div
  data-css-1bbe0j3=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    Banner text
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Anchor 1`] = `
<div
  data-css-1bbe0j3=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Anchor Yellow 1`] = `
<div
  data-css-mrqgze=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    this is the text with an 
    <a
      href="https://duckduckgo.com"
    >
      anchor tag
    </a>
    .
  </p>
</div>
`;

exports[`Storyshots Components/Banner Child Link 1`] = `
<div
  data-css-1bbe0j3=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    this is the text with an
     
    <a
      className="psds-link psds-link--theme--dark psds-link--appearance-default"
      href="https://duckduckgo.com"
    >
      Link component
    </a>
  </p>
</div>
`;

exports[`Storyshots Components/Banner Colors 1`] = `
<div
  style={
    Object {
      "display": "grid",
      "gap": "20px",
      "gridTemplateColumns": "1fr 1fr",
    }
  }
>
  <div
    data-css-1bbe0j3=""
  >
    <p
      data-css-17nixd9=""
      data-css-sdl038=""
    >
      blue
    </p>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    data-css-1obqs0o=""
  >
    <p
      data-css-17nixd9=""
      data-css-sdl038=""
    >
      green
    </p>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    data-css-mrqgze=""
  >
    <p
      data-css-17nixd9=""
      data-css-sdl038=""
    >
      yellow
    </p>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
  <div
    data-css-k0cdxm=""
  >
    <p
      data-css-17nixd9=""
      data-css-sdl038=""
    >
      red
    </p>
    <button
      data-css-w2n93m=""
      onClick={[Function]}
    >
      <div
        data-css-7dab2f=""
      >
        <svg
          aria-label="close icon"
          role="img"
          viewBox="0 0 24 24"
        >
          <path
            d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
          />
        </svg>
      </div>
    </button>
  </div>
</div>
`;

exports[`Storyshots Components/Banner On Click 1`] = `
<div
  data-css-1bbe0j3=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    Banner text
  </p>
  <button
    data-css-w2n93m=""
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Banner On Click Long Text 1`] = `
<div
  data-css-1bbe0j3=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    this is the long text. this is the long text. this is the long text. this
  is the long text. this is the long text. this is the long text. this is
  the long text. this is the long text. this is the long text. this is the
  long text. this is the long text. this is the long text.{' '} 
  </p>
  <button
    data-css-w2n93m=""
    onClick={[Function]}
  >
    <div
      data-css-7dab2f=""
    >
      <svg
        aria-label="close icon"
        role="img"
        viewBox="0 0 24 24"
      >
        <path
          d="M17.646 7.056l-.702-.702a.5.5 0 00-.708 0L12 10.59 7.764 6.354a.5.5 0 00-.708 0l-.702.702a.5.5 0 000 .708L10.59 12l-4.236 4.236a.5.5 0 000 .707l.702.703a.5.5 0 00.708 0L12 13.41l4.236 4.236a.5.5 0 00.708 0l.702-.703a.5.5 0 000-.707L13.41 12l4.236-4.236a.5.5 0 000-.708z"
        />
      </svg>
    </div>
  </button>
</div>
`;

exports[`Storyshots Components/Banner Style Class Name 1`] = `
<div
  className="someClass"
  data-css-1bbe0j3=""
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    Banner text
  </p>
</div>
`;

exports[`Storyshots Components/Banner Style Prop 1`] = `
<div
  data-css-1bbe0j3=""
  style={
    Object {
      "outline": "3px solid red",
    }
  }
>
  <p
    data-css-17nixd9=""
    data-css-sdl038=""
  >
    Banner text
  </p>
</div>
`;
